Added sequelize and created the data base

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.0",
+    "sequelize-cli": "^6.4.1",
     "sveltestrap": "^5.7.0"
   }
 }
